--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+/tests/ebsynth/images/
